chore: update videoinstruct100k

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1361,6 +1361,289 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import json\n",
+    "from torch.utils.data import Dataset\n",
+    "from PIL import Image\n",
+    "import random\n",
+    "import os\n",
+    "import torch\n",
+    "import json\n",
+    "import logging\n",
+    "import transformers\n",
+    "from typing import Dict, Sequence\n",
+    "from dataclasses import dataclass\n",
+    "from valley.util.config import *\n",
+    "from valley.util.data_util import preprocess, preprocess_multimodal_multiimage, load_video\n",
+    "import copy\n",
+    "import random\n",
+    "from huggingface_hub import HfFileSystem\n",
+    "import zipfile\n",
+    "import shutil\n",
+    "\n",
+    "class HybridDataset(Dataset):\n",
+    "    \"\"\"Dataset for supervised fine-tuning.\"\"\"\n",
+    "\n",
+    "    def __init__(self, data_path: str, video_path: str,\n",
+    "                 tokenizer: transformers.PreTrainedTokenizer,\n",
+    "                 multimodal_cfg: dict, **kwargs):\n",
+    "        super(HybridDataset, self).__init__()\n",
+    "        logging.warning(\"Loading data...\")\n",
+    "        if multimodal_cfg['fast_epoch']:\n",
+    "            if data_path is not None:\n",
+    "                list_data_dict = json.load(open(data_path, \"r\"))[0:10]\n",
+    "            else:\n",
+    "                list_data_dict=[]\n",
+    "            if video_path is not None:\n",
+    "                list_video_dict = json.load(open(video_path, 'r'))[0:10]\n",
+    "            else:\n",
+    "                list_video_dict = []\n",
+    "            if multimodal_cfg['use_fashion']:\n",
+    "                list_fashion_dict = json.load(\n",
+    "                    open(kwargs['fashion_data_path']))[0:100]\n",
+    "        else:\n",
+    "            if data_path is not None:\n",
+    "                list_data_dict = json.load(open(data_path, \"r\"))\n",
+    "            else:\n",
+    "                list_data_dict = []\n",
+    "            if video_path is not None:\n",
+    "                list_video_dict = json.load(open(video_path, 'r'))\n",
+    "            else:\n",
+    "                list_video_dict = []\n",
+    "            if multimodal_cfg['use_fashion']:\n",
+    "                list_fashion_dict = json.load(\n",
+    "                    open(kwargs['fashion_data_path']))\n",
+    "        logging.warning(\"Formatting inputs...Skip in lazy mode\")\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.list_data_dict = list_video_dict+list_data_dict + \\\n",
+    "            list_fashion_dict if multimodal_cfg['use_fashion'] else list_video_dict + list_data_dict\n",
+    "        # self.list_data_dict = list_data_dict\n",
+    "        #random.shuffle(self.list_data_dict)\n",
+    "        self.multimodal_cfg = multimodal_cfg\n",
+    "        self.header_mode = multimodal_cfg['conv_mode']\n",
+    "        self.fs = HfFileSystem()\n",
+    "\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.list_data_dict)\n",
+    "\n",
+    "    def __getitem__(self, i) -> Dict[str, torch.Tensor]:\n",
+    "        sources = self.list_data_dict[i]\n",
+    "\n",
+    "        try:\n",
+    "            if isinstance(i, int):\n",
+    "                sources = [sources]\n",
+    "            assert len(\n",
+    "                sources) == 1, \"Don't know why it is wrapped to a list\"  # FIXME\n",
+    "            if 'image' in sources[0]:\n",
+    "                processor = self.multimodal_cfg['image_processor']\n",
+    "                # multi image preprocess\n",
+    "                if isinstance(self.list_data_dict[i]['image'], list):\n",
+    "                    image_file_lsit = self.list_data_dict[i]['image']  # 全部图片\n",
+    "                    image = [Image.open(image_file)\n",
+    "                             for image_file in image_file_lsit]\n",
+    "                    image = processor.preprocess(image, return_tensors='pt')[\n",
+    "                        'pixel_values']\n",
+    "                    # FIXME: 14 is hardcoded patch size\n",
+    "                    cur_token_len = (image[0].shape[1] //\n",
+    "                                     14) * (image[0].shape[2]//14)\n",
+    "                    sources = preprocess_multimodal_multiimage(\n",
+    "                        copy.deepcopy([e[\"conversations\"] for e in sources]),\n",
+    "                        self.multimodal_cfg, cur_token_len, image.shape[0]\n",
+    "                    )\n",
+    "                else:\n",
+    "                    image_file = self.list_data_dict[i]['image']\n",
+    "                    image_folder = self.multimodal_cfg['image_folder']\n",
+    "                    if 'train2014' in image_folder:\n",
+    "                        image_file = 'COCO_train2014_'+image_file\n",
+    "                    image = Image.open(os.path.join(image_folder, image_file))\n",
+    "                    if self.multimodal_cfg['image_aspect_ratio'] == 'keep':\n",
+    "                        max_hw, min_hw = max(image.size), min(image.size)\n",
+    "                        aspect_ratio = max_hw / min_hw\n",
+    "                        max_len, min_len = 448, 224\n",
+    "                        shortest_edge = int(\n",
+    "                            min(max_len / aspect_ratio, min_len))\n",
+    "                        image = processor.preprocess(image, return_tensors='pt', do_center_crop=False, size={\n",
+    "                                                     \"shortest_edge\": shortest_edge})['pixel_values'][0]\n",
+    "                    else:\n",
+    "                        image = processor.preprocess(image, return_tensors='pt')[\n",
+    "                            'pixel_values'][0]\n",
+    "                    if self.multimodal_cfg['multi_image']:\n",
+    "                        image = image.unsqueeze(0)\n",
+    "                    if len(image.shape) == 3:\n",
+    "                        # FIXME: 14 is hardcoded patch size\n",
+    "                        cur_token_len = (\n",
+    "                            image.shape[1]//14) * (image.shape[2]//14)\n",
+    "                    elif len(image.shape) == 4:\n",
+    "                        # FIXME: 14 is hardcoded patch size\n",
+    "                        cur_token_len = (\n",
+    "                            image.shape[2]//14) * (image.shape[3]//14)\n",
+    "                    sources = preprocess_multimodal_multiimage(\n",
+    "                        copy.deepcopy([e[\"conversations\"] for e in sources]),\n",
+    "                        self.multimodal_cfg, cur_token_len, image.shape[0])\n",
+    "            elif 'video' in sources[0]:\n",
+    "                video_file = self.list_data_dict[i]['video'] if '.mp4' in self.list_data_dict[\n",
+    "                    i]['video'] else self.list_data_dict[i]['video']+'.mp4'\n",
+    "                if 'source' in self.list_data_dict[i]:\n",
+    "                    video_file_source = self.list_data_dict[i]['source']\n",
+    "                    video_folder = self.multimodal_cfg['video_folder'] + \\\n",
+    "                        '/'+video_file_source\n",
+    "                else:\n",
+    "                    video_folder = self.multimodal_cfg['video_folder'] + \\\n",
+    "                        '/'\n",
+    "                video_path = video_folder+'/' + video_file\n",
+    "                if not os.path.exist(video_path):\n",
+    "                    hf_path = \"datasets/Vividbot/vast2m_vi\" + video_path.split(\"/\")[-2] + \".zip\"\n",
+    "                    zip_folder = fs.open(hf_path)\n",
+    "                    with zipfile.ZipFile(zip_folder, 'r') as zip_ref:\n",
+    "                        zip_ref.extractall(video_path.split(\"/\")[-2])\n",
+    "                if len(os.listdir(video_folder)) >= 10:\n",
+    "                    # delete all folder in video_folder\n",
+    "                    for dir in os.listdir(video_folder):\n",
+    "                        shutil.rmtree(video_folder+\"/\"+dir)\n",
+    "                video = load_video(video_path)\n",
+    "                # print(video.shape)\n",
+    "                video = video.permute(1, 0, 2, 3)\n",
+    "                # FIXME: 14 is hardcoded patch size\n",
+    "                cur_token_len = (video[0].shape[1]//14) * \\\n",
+    "                    (video[0].shape[2]//14)\n",
+    "                sources = preprocess_multimodal_multiimage(\n",
+    "                    copy.deepcopy([e[\"conversations\"] for e in sources]),\n",
+    "                    self.multimodal_cfg, cur_token_len, video.shape[0]\n",
+    "                )\n",
+    "            else:\n",
+    "                sources = copy.deepcopy([e[\"conversations\"] for e in sources])\n",
+    "            data_dict = preprocess(\n",
+    "                sources,\n",
+    "                self.tokenizer, self.header_mode)\n",
+    "            if isinstance(i, int):\n",
+    "                data_dict = dict(input_ids=data_dict[\"input_ids\"][0],\n",
+    "                                 labels=data_dict[\"labels\"][0])\n",
+    "\n",
+    "            # image exist in the data\n",
+    "            if 'image' in self.list_data_dict[i]:\n",
+    "                data_dict['image'] = image\n",
+    "            elif 'video' in self.list_data_dict[i]:\n",
+    "                data_dict['image'] = video\n",
+    "            elif self.multimodal_cfg['is_multimodal']:\n",
+    "                # image does not exist in the data, but the model is multimodal\n",
+    "                crop_size = self.multimodal_cfg['image_processor'].crop_size\n",
+    "                data_dict['image'] = torch.zeros(\n",
+    "                    3, crop_size['height'], crop_size['width'])\n",
+    "            return data_dict\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            print(self.list_data_dict[i]['id'])\n",
+    "            return ('fail', sources)\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class DataCollatorForSupervisedDataset(object):\n",
+    "    \"\"\"Collate examples for supervised fine-tuning.\"\"\"\n",
+    "\n",
+    "    tokenizer: transformers.PreTrainedTokenizer\n",
+    "\n",
+    "\n",
+    "    def __call__(self, instances: Sequence[Dict]) -> Dict[str, torch.Tensor]:\n",
+    "        instances_no_error = []\n",
+    "        for ins in instances:\n",
+    "            if type(ins) != tuple:\n",
+    "                instances_no_error.append(ins)\n",
+    "        instances = instances_no_error\n",
+    "        input_ids, labels = tuple([instance[key] for instance in instances]\n",
+    "                                  for key in (\"input_ids\", \"labels\"))\n",
+    "        input_ids = torch.nn.utils.rnn.pad_sequence(\n",
+    "            input_ids,\n",
+    "            batch_first=True,\n",
+    "            padding_value=self.tokenizer.pad_token_id)\n",
+    "        # print(input_ids.shape)\n",
+    "        labels = torch.nn.utils.rnn.pad_sequence(labels,\n",
+    "                                                 batch_first=True,\n",
+    "                                                 padding_value=IGNORE_INDEX)\n",
+    "        batch = dict(\n",
+    "            input_ids=input_ids,\n",
+    "            labels=labels,\n",
+    "            attention_mask=input_ids.ne(self.tokenizer.pad_token_id),\n",
+    "        )\n",
+    "\n",
+    "        if 'image' in instances[0]:\n",
+    "            images = [instance['image'].half() for instance in instances]\n",
+    "            if all(x is not None and x.shape == images[0].shape for x in images):\n",
+    "                batch['images'] = torch.stack(images)\n",
+    "            else:\n",
+    "                batch['images'] = images\n",
+    "\n",
+    "        return batch\n",
+    "\n",
+    "\n",
+    "def make_video_supervised_data_module(tokenizer: transformers.PreTrainedTokenizer,\n",
+    "                                      data_args) -> Dict:\n",
+    "    \"\"\"Make dataset and collator for supervised fine-tuning.\"\"\"\n",
+    "    train_dataset = HybridDataset(\n",
+    "        data_args.data_path,\n",
+    "        data_args.video_data_path,\n",
+    "        tokenizer,\n",
+    "        dict(\n",
+    "            conv_mode=data_args.conv_mode,\n",
+    "            fast_epoch=data_args.fast_epoch,\n",
+    "            use_fashion=data_args.use_fashion,\n",
+    "            multi_image=data_args.multi_image,\n",
+    "            num_image=data_args.num_image,\n",
+    "            is_multimodal=data_args.is_multimodal,\n",
+    "            image_token_len=data_args.image_token_len,\n",
+    "            image_folder=data_args.image_folder,\n",
+    "            video_folder=data_args.video_folder,\n",
+    "            image_aspect_ratio=data_args.image_aspect_ratio,\n",
+    "            use_im_start_end=getattr(\n",
+    "                data_args, 'mm_use_im_start_end', False),\n",
+    "            image_processor=getattr(data_args, 'image_processor', None)), fashion_data_path=data_args.fashion_data_path)\n",
+    "\n",
+    "    data_collator = DataCollatorForSupervisedDataset(tokenizer=tokenizer)\n",
+    "    return dict(train_dataset=train_dataset,\n",
+    "                eval_dataset=None,\n",
+    "                data_collator=data_collator)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/duytran/miniconda3/envs/vividbot2/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Generating train split: 157712 examples [00:01, 93743.43 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "import json\n",
+    "\n",
+    "path = \"/home/duytran/Downloads/vividbot_data/llava_instruct_150k.json\"\n",
+    "data = load_dataset(\"json\", data_files=path)[\"train\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
