add code to filter unique ids

--- a/vivid_instruct_65k/2.generate_youtube_links.ipynb
+++ b/vivid_instruct_65k/2.generate_youtube_links.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from typing import Dict, List\n",
     "\n",
     "saved_keywords: Dict[str, List[str]] = json.load(\n",
-    "    open(\"generated_keywords.json\", \"r\", encoding=\"utf-8\")\n",
+    "    open(\"data/generated_keywords.json\", \"r\", encoding=\"utf-8\")\n",
     ")\n",
     "\n",
     "CATEGORIES = list(saved_keywords.keys())"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        " 'Health & Wellness']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,24 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 124/124 [01:09<00:00,  1.78it/s]\n",
-      "100%|██████████| 106/106 [01:09<00:00,  1.52it/s]\n",
-      "100%|██████████| 131/131 [01:29<00:00,  1.47it/s]\n",
-      "100%|██████████| 113/113 [01:19<00:00,  1.42it/s]\n",
-      "100%|██████████| 109/109 [01:03<00:00,  1.73it/s]\n",
-      "100%|██████████| 146/146 [01:37<00:00,  1.50it/s]\n",
-      "100%|██████████| 136/136 [01:20<00:00,  1.68it/s]\n",
-      "100%|██████████| 126/126 [01:25<00:00,  1.47it/s]\n",
-      "100%|██████████| 179/179 [01:49<00:00,  1.64it/s]\n",
-      "100%|██████████| 125/125 [01:13<00:00,  1.70it/s]\n",
-      "100%|██████████| 10/10 [13:38<00:00, 81.85s/it]\n"
+      "100%|██████████| 124/124 [00:00<00:00, 55619.05it/s]\n",
+      "100%|██████████| 106/106 [00:00<00:00, 52953.34it/s]\n",
+      "100%|██████████| 131/131 [00:00<00:00, 52483.89it/s]\n",
+      "100%|██████████| 113/113 [00:00<00:00, 62527.22it/s]\n",
+      "100%|██████████| 109/109 [00:00<00:00, 54995.69it/s]\n",
+      "100%|██████████| 146/146 [00:00<00:00, 54437.58it/s]\n",
+      "100%|██████████| 136/136 [00:00<00:00, 57363.77it/s]\n",
+      "100%|██████████| 126/126 [00:00<00:00, 40781.10it/s]\n",
+      "100%|██████████| 179/179 [00:00<00:00, 40436.28it/s]\n",
+      "100%|██████████| 125/125 [00:00<00:00, 43792.85it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 211.37it/s]\n"
      ]
     }
    ],
@@ -117,19 +117,61 @@
     "    return all_youtube_search_results\n",
     "\n",
     "\n",
-    "all_youtube_search_results = get_all_youtube_search_results(saved_keywords)\n",
-    "\n",
-    "# write the results to a json file\n",
-    "with open(\"all_youtube_search_results.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(all_youtube_search_results, f, indent=2, ensure_ascii=False)"
+    "all_youtube_search_results = get_all_youtube_search_results(saved_keywords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get unique search results through all categories\n",
+    "# if a video appears in multiple categories, it will only be counted once in the first category\n",
+    "\n",
+    "unique_search_results = {}\n",
+    "for category in all_youtube_search_results:\n",
+    "    unique_search_results[category] = []\n",
+    "    for video_id in all_youtube_search_results[category]:\n",
+    "        found = False\n",
+    "        for category2 in unique_search_results:\n",
+    "            if video_id in unique_search_results[category2]:\n",
+    "                found = True\n",
+    "                break\n",
+    "        if not found:\n",
+    "            unique_search_results[category].append(video_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7943"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([video_id for category in unique_search_results for video_id in unique_search_results[category]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the results to a json file\n",
+    "with open(\"data/youtube_search_results.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(unique_search_results, f, indent=2, ensure_ascii=False)"
+   ]
   }
  ],
  "metadata": {
