--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1380,7 +1380,7 @@
     "from huggingface_hub import HfFileSystem\n",
     "import zipfile\n",
     "import shutil\n",
-    "\n",
+    "from huggingface_hub import hf_hub_download\n",
     "class HybridDataset(Dataset):\n",
     "    \"\"\"Dataset for supervised fine-tuning.\"\"\"\n",
     "\n",
@@ -1491,17 +1491,19 @@
     "                else:\n",
     "                    video_folder = self.multimodal_cfg['video_folder'] + \\\n",
     "                        '/'\n",
-    "                video_path = video_folder+'/' + video_file\n",
-    "                if not os.path.exist(video_path):\n",
-    "                    hf_path = \"datasets/Vividbot/vast2m_vi\" + video_path.split(\"/\")[-2] + \".zip\"\n",
-    "                    zip_folder = fs.open(hf_path)\n",
-    "                    with zipfile.ZipFile(zip_folder, 'r') as zip_ref:\n",
-    "                        zip_ref.extractall(video_path.split(\"/\")[-2])\n",
+    "                video_path = video_folder + video_file\n",
+    "            \n",
     "                if len(os.listdir(video_folder)) >= 10:\n",
     "                    # delete all folder in video_folder\n",
     "                    for dir in os.listdir(video_folder):\n",
     "                        shutil.rmtree(video_folder+\"/\"+dir)\n",
-    "                video = load_video(video_path)\n",
+    "                if not os.path.exists(video_path):\n",
+    "                    # hf_path = \"datasets/Vividbot/vast2m_vi/video/\" + video_path.split(\"/\")[-2] + \".zip\"\n",
+    "                    # zip_folder = self.fs.open(hf_path)\n",
+    "                    hf_hub_download(repo_id=\"Vividbot/vast2m_vi\", filename=\"video/\"+ video_path.split(\"/\")[-2] + \".zip\", repo_type=\"dataset\", local_dir=video_folder)\n",
+    "                    with zipfile.ZipFile(video_folder + \"video/\" + video_path.split(\"/\")[-2] + \".zip\", 'r') as zip_ref:\n",
+    "                        zip_ref.extractall(video_path.split(\"/\")[-2])\n",
+    "                video = load_video(video_folder+'/' + video_file)\n",
     "                # print(video.shape)\n",
     "                video = video.permute(1, 0, 2, 3)\n",
     "                # FIXME: 14 is hardcoded patch size\n",
@@ -1609,34 +1611,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "import json\n",
+    "\n",
+    "path = \"/home/duytran/Downloads/output_ds/vast_2m_final.json\"\n",
+    "data = load_dataset(\"json\", data_files=path)[\"train\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/duytran/miniconda3/envs/vividbot2/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Generating train split: 157712 examples [00:01, 93743.43 examples/s]\n"
+      "Creating json from Arrow format: 100%|██████████| 1938/1938 [00:13<00:00, 140.71ba/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "850549164"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from datasets import load_dataset\n",
-    "import json\n",
-    "\n",
-    "path = \"/home/duytran/Downloads/vividbot_data/llava_instruct_150k.json\"\n",
-    "data = load_dataset(\"json\", data_files=path)[\"train\"]\n"
+    "data.to_json(\"/home/duytran/Downloads/output_ds/vast_2m_final_all.json\", force_ascii=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data)"
+    "import json\n",
+    "\n",
+    "def jsonl_to_json(jsonl_file_path, json_file_path):\n",
+    "    # Read the JSONL file\n",
+    "    with open(jsonl_file_path, 'r',  encoding='utf-8') as jsonl_file:\n",
+    "        json_list = []\n",
+    "        for line in jsonl_file:\n",
+    "            json_object = json.loads(line)\n",
+    "            json_list.append(json_object)\n",
+    "    \n",
+    "    # Write to the JSON file\n",
+    "    with open(json_file_path, 'w',  encoding='utf-8') as json_file:\n",
+    "        json.dump(json_list, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "# Example usage\n",
+    "jsonl_file_path = \"/home/duytran/Downloads/output_ds/vast_2m_final.json\"\n",
+    "json_file_path = \"/home/duytran/Downloads/output_ds/vast_2m_final_all.json\"\n",
+    "\n",
+    "jsonl_to_json(jsonl_file_path, json_file_path)"
    ]
   },
   {
