--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1819,10 +1819,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# set HF_HUB_DOWNLOAD_TIMEOUT to 1000\n",
+    "os.environ['HF_HUB_DOWNLOAD_TIMEOUT'] = '1000'\n",
+    "print(os.environ['HF_HUB_DOWNLOAD_TIMEOUT'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.environ['HF_HUB_ETAG_TIMEOUT'] = '1000'"
+   ]
   }
  ],
  "metadata": {
