add script for instruct data

--- a/vivid_instruct_65k/3.process_youtube_videos.ipynb
+++ b/vivid_instruct_65k/3.process_youtube_videos.ipynb
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "def process_single_video(video_id: str) -> Dict:\n",
-    "    with YoutubeDL(params={\"format\": \"best[ext=mp4]\", \"quiet\": True, \"\"}) as ydl:\n",
+    "    with YoutubeDL(params={\"format\": \"best[ext=mp4]\", \"quiet\": True}) as ydl:\n",
     "        ydl.download(f\"https://www.youtube.com/watch?v={video_id}\")\n",
     "        return True"
    ]
