--- a/vividbot/notebooks/vivid_instruct_65k/5.combine_id_with_clip_durations.ipynb
+++ b/vividbot/notebooks/vivid_instruct_65k/5.combine_id_with_clip_durations.ipynb
@@ -126,7 +126,7 @@
     "print(dataset)\n",
     "\n",
     "\n",
-    "def extract_duration(video_id):\n",
+    "def process(video_id):\n",
     "    with YoutubeDL(params={\"format\": \"best[ext=mp4]\", \"quiet\": True}) as ydl:\n",
     "        try:\n",
     "            video_info = ydl.extract_info(\n",
