--- a/vividbot/experiments/vivid_instruct_65k/image/test.ipynb
+++ b/vividbot/experiments/vivid_instruct_65k/image/test.ipynb
@@ -112,6 +112,33 @@
     "\n",
     "print(str(st).encode(\"utf-8\").decode(\"utf-8\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/dminhvu/data/images/metadata.jsonl\"\n",
+    "\n",
+    "lines = open(path, \"r\", encoding=\"utf-8\").readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "for line in lines:\n",
+    "    data = json.loads(line)\n",
+    "    # remove \"description\" from data\n",
+    "    data.pop(\"description\", None)\n",
+    "    with open(\"/home/dminhvu/data/images/metadata2.jsonl\", \"a\", encoding=\"utf-8\") as f:\n",
+    "        f.write(json.dumps(data, ensure_ascii=False) + \"\\n\")"
+   ]
   }
  ],
  "metadata": {
@@ -130,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
