--- a/vividbot/experiment/llava-instruct-150k-vi/test.ipynb
+++ b/vividbot/experiment/llava-instruct-150k-vi/test.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from datasets import load_dataset\n",
     "\n",
     "metadata_raw = open(f\"{Path.home()}/Downloads/train.json\", \"r\").readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +84,26 @@
     "      overwrite=True,\n",
     "    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "os.makedirs(\"shards\", exist_ok=True)\n",
+    "\n",
+    "BASE_DATA_PATH = f\"{Path.home()}/llava-instruct-150k-vi\"\n",
+    "\n",
+    "with open(f\"{BASE_DATA_PATH}/metadata.json\", \"w\") as f:\n",
+    "  for shard in os.listdir(f\"{BASE_DATA_PATH}/shards\"):\n",
+    "    with open(f\"{BASE_DATA_PATH}/shards/{shard}\", \"r\") as f1:\n",
+    "      for line in f1:\n",
+    "        f.write(line)"
    ]
   }
  ],
