chore: update readme

--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,8 +1378,8 @@
     "        json.dump(json_list, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
     "# Example usage\n",
-    "jsonl_file_path = \"/home/duytran/Downloads/output_ds/videoinstruck100_vi.json\"\n",
-    "json_file_path = \"/home/duytran/Downloads/output_ds/videoinstruck100_vi_all.json\"\n",
+    "jsonl_file_path = \"/home/duytran/Downloads/metadata-training.json\"\n",
+    "json_file_path = \"/home/duytran/Downloads/vividbot_video_65k.json\"\n",
     "\n",
     "jsonl_to_json(jsonl_file_path, json_file_path)"
    ]
@@ -1493,23 +1493,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'e01ea8635f2ee41e2f05021fe9b61709', 'image': 'images/e01ea8635f2ee41e2f05021fe9b61709.jpg', 'conversations': [{'from': 'human', 'value': 'Cụm từ \"왜 나야?!\" trong tiếng Hàn có nghĩa là gì trong tiếng Việt?\\n<image>'}, {'from': 'gpt', 'value': 'Cụm từ \"왜 나야?!\" trong tiếng Hàn có nghĩa là \"Tại sao lại là tôi?!\" trong tiếng Việt.'}, {'from': 'human', 'value': 'Cụm từ tiếng Hàn trong hình được phiên âm như thế nào?\\n<image>'}, {'from': 'gpt', 'value': 'Cụm từ tiếng Hàn trong hình được phiên âm là \"wae na·ya\".'}, {'from': 'human', 'value': 'Theo bạn, hình ảnh này muốn truyền tải điều gì?\\n<image>'}, {'from': 'gpt', 'value': 'Hình ảnh này muốn truyền tải một cụm từ tiếng Hàn thông dụng, kèm theo phiên âm và nghĩa tiếng Anh để người xem dễ dàng học theo.'}], 'timestamp': 1722106902, 'keyword': 'học tiếng hàn online', 'category': 'Education'}\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating json from Arrow format: 100%|██████████| 89/89 [00:00<00:00, 92.30ba/s]\n"
+      "Creating json from Arrow format: 100%|██████████| 14/14 [00:00<00:00, 54.41ba/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "57621400"
+       "14423352"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,11 +1524,15 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "path = \"/home/duytran/Downloads/output_ds/videoinstruck_100k_chunk_vi_final\"\n",
+    "path = \"/home/duytran/Downloads/metadata.jsonl\"\n",
     "\n",
-    "dataset = load_dataset(\"json\", data_files=path + \"/*.json\")[\"train\"]\n",
-    "\n",
-    "dataset.to_json(\"videoinstruck100_vi.json\", force_ascii=False)"
+    "def map_fn(batch):\n",
+    "    batch['image'] = [\"images/\" + item for item in batch['image']]\n",
+    "    return batch\n",
+    "dataset = load_dataset(\"json\", data_files=path)[\"train\"]\n",
+    "dataset = dataset.map(map_fn, batched=True)\n",
+    "print(dataset[0])\n",
+    "dataset.to_json(\"/home/duytran/Downloads/vividbot_image_10k.json\", force_ascii=False)"
    ]
   },
   {
@@ -1529,7 +1540,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from huggingface_hub import HfFileSystem\n",
+    "\n",
+    "\n",
+    "fs = HfFileSystem()\n",
+    "# print all file in .zip file\n",
+    "temp = fs.open(\"datasets/Vividbot/vividbot_video/videos\")\n",
+    "# change folder name\n"
+   ]
   }
  ],
  "metadata": {
