--- a/vividbot/experiment/vivid_instruct_65k/image/test.ipynb
+++ b/vividbot/experiment/vivid_instruct_65k/image/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from typing import Dict, List\n",
     "\n",
     "saved_keywords: Dict[str, List[str]] = json.load(\n",
-    "    open(\"../data/generated_keywords.json\", \"r\", encoding=\"utf-8\")\n",
+    "    open(\"../data/image_generated_keywords.json\", \"r\", encoding=\"utf-8\")\n",
     ")\n",
     "\n",
     "CATEGORIES = list(saved_keywords.keys())"
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "keywords = [keyword for category in CATEGORIES for keyword in saved_keywords[category]]\n",
     "\n",
-    "with open(\"../data/flattened_keywords.jsonl\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../data/image_flattened_keywords.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for keyword in keywords:\n",
     "        f.write(json.dumps({\n",
     "            \"keyword\": keyword,\n",
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1295"
+       "2134"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
