--- a/vividbot/experiment/vivid_instruct_65k/image/test.ipynb
+++ b/vividbot/experiment/vivid_instruct_65k/image/test.ipynb
@@ -54,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from vividbot.data.task.vivid_instruct_65k.utils import pinscrape\n",
     "\n",
     "\n",
-    "details = pinscrape.scraper.scrape(\"messi\", \"output\", {}, 10, 2)"
+    "details = pinscrape.scraper.scrape(\"phim hoạt hình Trung Quốc\", \"output\", {}, 12, 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,24 +74,78 @@
       "text/plain": [
        "{'isDownloaded': True,\n",
        " 'search_engine_status_code': 200,\n",
-       " 'urls_list': ['https://i.pinimg.com/originals/12/8e/6e/128e6e5e651dab7aae7f135e24b74a08.jpg',\n",
-       "  'https://i.pinimg.com/originals/6d/8c/ef/6d8cef114f2613042765e3f7fc8262d0.jpg'],\n",
-       " 'searched_urls': ['https://www.pinterest.com/mariojrlopez/lionel-messi',\n",
-       "  'wallpapercave.com',\n",
-       "  'wallpapers.com',\n",
-       "  'pinterest.com'],\n",
-       " 'extracted_urls': ['https://www.pinterest.com/mariojrlopez/lionel-messi',\n",
-       "  'pinterest.com'],\n",
-       " 'keyword': 'messi'}"
+       " 'urls_list': ['https://i.pinimg.com/originals/11/b3/62/11b362173272a4f92b6485b1c9f51197.jpg',\n",
+       "  'https://i.pinimg.com/originals/1a/72/87/1a7287950d8af71dfb7ffa29e972dd95.jpg',\n",
+       "  'https://i.pinimg.com/originals/0e/99/1c/0e991c52cff948288f18a685b2ad9a78.jpg',\n",
+       "  'https://i.pinimg.com/originals/a2/c2/be/a2c2bea579928bcb9818e24c85ea29ef.jpg',\n",
+       "  'https://i.pinimg.com/originals/0b/ac/6f/0bac6fb8b06661d19e9d32118050f7de.png',\n",
+       "  'https://i.pinimg.com/originals/e7/f8/d0/e7f8d0e1b7fda1bc9fc12174087e7d38.jpg',\n",
+       "  'https://i.pinimg.com/originals/ce/ad/b2/ceadb2c67f532a804fc8d18eb4efaa15.jpg',\n",
+       "  'https://i.pinimg.com/originals/81/22/cc/8122cc8c5b7750d18df2fab49b53036b.jpg',\n",
+       "  'https://i.pinimg.com/originals/59/9a/d5/599ad58e3afa4deb1bb07d20fbf18c53.jpg',\n",
+       "  'https://i.pinimg.com/originals/25/4a/3a/254a3a8e2e28c095ba98b620898df026.jpg',\n",
+       "  'https://i.pinimg.com/originals/1c/da/e9/1cdae9cdff45738c9b5453b6403d7426.png',\n",
+       "  'https://i.pinimg.com/originals/e1/e9/08/e1e9087b5fc348a3f120fc291ad91ef5.jpg',\n",
+       "  'https://i.pinimg.com/originals/1f/b8/a7/1fb8a743e0795803866fca860a9e4417.jpg',\n",
+       "  'https://i.pinimg.com/originals/56/2f/e2/562fe2c17e90204b3bc4a47fe941471c.jpg',\n",
+       "  'https://i.pinimg.com/originals/76/d2/e2/76d2e233c91a6ac72a5b71d2f12ca2c6.png',\n",
+       "  'https://i.pinimg.com/originals/d4/bf/d8/d4bfd8a15592c8396bf0532b6d45148f.jpg',\n",
+       "  'https://i.pinimg.com/originals/26/8f/5a/268f5afc67743e3d999fc497c2f6f0f0.png',\n",
+       "  'https://i.pinimg.com/originals/3c/95/81/3c95817ac20a79e2ddc41fc280327b2a.jpg',\n",
+       "  'https://i.pinimg.com/originals/d4/73/7f/d4737fb42222d0f81f3347fa256c0400.jpg'],\n",
+       " 'searched_urls': ['https://www.pinterest.com/nguyenngoc…',\n",
+       "  'youtube.com',\n",
+       "  'youtube.com',\n",
+       "  'canhrau.com',\n",
+       "  'bloganchoi.com',\n",
+       "  'minhvy.net',\n",
+       "  'bing.com/images',\n",
+       "  'https://www.pinterest.com/khuechuyenbl/hoạt-hình-3d-trung-quốc',\n",
+       "  'cellphones.com.vn',\n",
+       "  'youtube.com',\n",
+       "  'https://www.pinterest.com/trongminhtv/hoạt-hình-3d-trung-quốc',\n",
+       "  'bing.com/videos',\n",
+       "  'bing.com/videos',\n",
+       "  'https://kids.pops.vn/blog/hoat-hinh-trung-quoc',\n",
+       "  'https://bloganchoi.com/phim-hoat-hinh-trung-quoc-3d-hay-nhat',\n",
+       "  'https://thegioireview.vn/phim-hoat-hinh …',\n",
+       "  'https://chuuniotaku.com/top-50-bo-hoat-hinh-trung...',\n",
+       "  'https://metiiu.com/giai-tri-genz/hoat-hinh-trung-quoc',\n",
+       "  'https://voh.com.vn/phim/phim-hoat-hin…',\n",
+       "  'https://toplist.vn/top-list/phim-hoat-hin…'],\n",
+       " 'extracted_urls': ['https://www.pinterest.com/nguyenngoc…',\n",
+       "  'https://www.pinterest.com/khuechuyenbl/hoạt-hình-3d-trung-quốc',\n",
+       "  'https://www.pinterest.com/trongminhtv/hoạt-hình-3d-trung-quốc'],\n",
+       " 'keyword': 'phim hoạt hình Trung Quốc'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11b362173272a4f92b6485b1c9f51197.jpg'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"https://i.pinimg.com/originals/11/b3/62/11b362173272a4f92b6485b1c9f51197.jpg\".split(\"/\")[-1]"
    ]
   },
   {
