--- a/vividbot/data/test.ipynb
+++ b/vividbot/data/test.ipynb
@@ -791,7 +791,7 @@
    "source": [
     "from datasets import load_from_disk\n",
     "\n",
-    "shard_0 = load_from_disk(f\"/home/duytran/Downloads/cache_dir/result/shard_0\")"
+    "shard_0 = load_from_disk(\"/home/duytran/Downloads/cache_dir/result/shard_0\")"
    ]
   },
   {
@@ -892,7 +892,6 @@
    ],
    "source": [
     "# read number folder in a folder\n",
-    "import os\n",
     "\n",
     "path = \"/home/duytran/Downloads/cache_dir.json\"\n",
     "\n",
@@ -917,7 +916,6 @@
     }
    ],
    "source": [
-    "import os\n",
     "\n",
     "os.rmdir(\"/home/duytran/Downloads/cache_dir/temp/shard_0/\")"
    ]
@@ -1066,7 +1064,7 @@
     "uploader.upload_file(\n",
     "  file_path=\"/home/duytran/Downloads/output_video/error/error_shard_1.json\",\n",
     "  repo_id=\"Vividbot/vast2m_vi\",\n",
-    "  path_in_repo=f\"error/error_shard_1.json\",\n",
+    "  path_in_repo=\"error/error_shard_1.json\",\n",
     "  repo_type=\"dataset\",\n",
     "  overwrite=True,\n",
     ")"
@@ -1274,14 +1272,12 @@
     "# print all file in .zip file\n",
     "temp = fs.open(\"datasets/Vividbot/vast2m_vi/video/shard_0.zip\")\n",
     "\n",
-    "import zipfile\n",
     "\n",
     "with zipfile.ZipFile(temp, \"r\") as zip_ref:\n",
     "  # zip_ref.printdir()\n",
     "  # extract all files\n",
     "  zip_ref.extractall(\"datasets/Vividbot/vast2m_vi/video/shard_0\")\n",
     "  # read video\n",
-    "  import cv2\n",
     "\n",
     "  cap = zip_ref.open(zip_ref.namelist()[1])\n",
     "  ret, frame = cap.read()\n",
@@ -1524,7 +1520,6 @@
     "import io\n",
     "import os\n",
     "import numpy as np\n",
-    "import decord\n",
     "from matplotlib import pyplot as plt\n",
     "from datasets import load_dataset\n",
     "\n",
@@ -1588,7 +1583,6 @@
     "#             break\n",
     "\n",
     "#     return np.array(frames_array)\n",
-    "import cv2\n",
     "\n",
     "with zipfile.ZipFile(temp, \"r\") as zip_ref:\n",
     "  # zip_ref.printdir()\n",
