--- a/vividbot/experiment/llava-instruct-150k-vi/test.ipynb
+++ b/vividbot/experiment/llava-instruct-150k-vi/test.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "os.makedirs(\"shards\", exist_ok=True)\n",
     "\n",
-    "with open(f\"./shards/shard_all.json\", \"w\") as f1:\n",
+    "with open(\"./shards/shard_all.json\", \"w\") as f1:\n",
     "  for i in range(0, len(metadata_list), 5000):\n",
     "    shard_id = i // 5000\n",
     "    with open(f\"./shards/shard_{shard_id}.json\", \"w\") as f:\n",
@@ -77,9 +77,9 @@
     "hf_processor = HuggingFaceProcessor()\n",
     "\n",
     "hf_processor.zip_and_upload_dir(\n",
-    "  dir_path=f\"./shards\",\n",
+    "  dir_path=\"./shards\",\n",
     "      repo_id=\"Vividbot/llava-instruct-150k-vi\",\n",
-    "      path_in_repo=f\"shards.zip\",\n",
+    "      path_in_repo=\"shards.zip\",\n",
     "      repo_type=\"dataset\",\n",
     "      overwrite=True,\n",
     "    \n",
