--- a/vividbot/experiment/vivid_instruct_65k/video/1.generate_keywords.ipynb
+++ b/vividbot/experiment/vivid_instruct_65k/video/1.generate_keywords.ipynb
@@ -48,7 +48,7 @@
     "        # This is the default and can be omitted\n",
     "        api_key=os.environ.get(\"GROQ_API_KEY\"),\n",
     "    )\n",
-    "    system_prompt = f\"\"\"You are a smart AI assistant specialized in keyword generation.\n",
+    "    system_prompt = \"\"\"You are a smart AI assistant specialized in keyword generation.\n",
     "Your task is to generate a list of the top 100 most searched keywords on YouTube and other video platforms for the image category provided by the user. The keywords must be popular in Vietnam and in Vietnamese language.\n",
     "You should avoid identical keywords (i.e. keywords with the same meaning or repeated words) and generate a diverse list of keywords that are relevant to the image category.\n",
     "Please format the response as a pure Python list of strings and just return the list of keywords.\n",
