--- a/vividbot/experiment/vivid_instruct_65k/video/3.process_youtube_videos.ipynb
+++ b/vividbot/experiment/vivid_instruct_65k/video/3.process_youtube_videos.ipynb
@@ -8,11 +8,10 @@
    "source": [
     "import json\n",
     "import itertools\n",
-    "from typing import Dict, List\n",
+    "from typing import Dict\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from yt_dlp import YoutubeDL\n",
-    "import yt_dlp\n",
     "\n",
     "np.random.seed(2024)"
    ]
